Restructure for Colab

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXV9bUA38G3Y0suWYtkteO",
+      "authorship_tag": "ABX9TyP8IsrL2RPQT/tjT+8ZlZcj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,14 +236,19 @@
         "    print('')\n",
         "    print('You chose a Managed Stock Investment plan')\n",
         "    stocksMin()\n",
-        "    stocksMax()\n",
-        "\n",
-        "\n",
+        "    stocksMax()\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DOjzzDphWI-f"
+      },
+      "source": [
         "opening()\n",
-        "options()\n",
-        "\n",
-        "\n",
-        "\n"
+        "options()"
       ],
       "execution_count": null,
       "outputs": []
