Force input value to be a float

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMpq49ZqVDKGTQMClqYbcJX",
+      "authorship_tag": "ABX9TyO3SCBDR96D0RUzq/fXaQd0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "    opening.phone = input()\n",
         "    \n",
         "    print ('How much would you like to invest per month (£)?')\n",
-        "    opening.investSum = input()\n",
+        "    opening.investSum = float(input())\n",
         "    \n",
         "\n",
         "def options ():\n",
@@ -238,7 +238,7 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
