Correct name of call to stocksMain function

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO3SCBDR96D0RUzq/fXaQd0",
+      "authorship_tag": "ABX9TyM5K/LoIRMDRvGty43Lw3VU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
         "    if option == '1':\n",
         "        savingsMain()\n",
         "    else:\n",
-        "        stockMain()\n",
+        "        stocksMain()\n",
         "        \n",
         "\n",
         "def savingsMain():\n",
