--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM5K/LoIRMDRvGty43Lw3VU",
+      "authorship_tag": "ABX9TyNHxEnTFUI98y/EASBEkIaE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,12 +31,10 @@
         "id": "bd2jgxfzVIVF"
       },
       "source": [
-        "#code for investmant calculator\n",
-        "#T-Level Sample Assessmnet Material (Task 2)\n",
+        "#code for investment calculator\n",
+        "#T-Level Sample Assessment Material (Task 2)\n",
         "#Non working code\n",
         "\n",
-        "\n",
-        "    \n",
         "def opening ():\n",
         "    print('#####################################')\n",
         "    print('Welcome to the investment quote system')\n",
@@ -51,8 +49,7 @@
         "    opening.phone = input()\n",
         "    \n",
         "    print ('How much would you like to invest per month (£)?')\n",
-        "    opening.investSum = float(input())\n",
-        "    \n",
+        "    opening.investSum = float(input())    \n",
         "\n",
         "def options ():\n",
         "    print('#####################################')\n",
@@ -63,7 +60,6 @@
         "    print('#####################################')\n",
         "    \n",
         "    option = input()\n",
-        "          \n",
         "      \n",
         "    while option != '1' and option != '2':\n",
         "        print('Please select an option (press 1 or 2 followed by enter)')\n",
@@ -88,8 +84,6 @@
         "    \n",
         "    savingsPrint()\n",
         "    \n",
-        "    \n",
-        "\n",
         "def savingsMin():\n",
         "    predictReturns = 0.012\n",
         "    yearlyFees = 0.0025 * 12\n",
@@ -135,7 +129,6 @@
         "            print('')\n",
         "    print('#####################################')  \n",
         "    print('')\n",
-        "\n",
         "     \n",
         "def stocksMain():\n",
         "    stocksMain.monthlyInvest = opening.investSum\n",
@@ -213,7 +206,6 @@
         "    print('#####################################')\n",
         "    print('') \n",
         "\n",
-        "\n",
         "def savingsPrint ():\n",
         "    print('--------------------------------------------------------')\n",
         "    print('Personal Investment Quote for:')\n",
@@ -238,7 +230,7 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": 16,
+      "execution_count": 20,
       "outputs": []
     },
     {
