--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNHxEnTFUI98y/EASBEkIaE",
+      "authorship_tag": "ABX9TyNg+KgJ2eT7NUlAw8fGeDG1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,7 +89,7 @@
         "    yearlyFees = 0.0025 * 12\n",
         "    savingsMin.total = savingsMain.yearlyInvest\n",
         "    print('#####################################')   \n",
-        "    print('Forecasted perfromance of this plan at the lowest rate of return:')\n",
+        "    print('Forecasted performance of this plan at the lowest rate of return:')\n",
         "    \n",
         "    for i in range(10):\n",
         "        savingsMin.total = (savingsMin.total + (savingsMin.total * predictReturns)) - yearlyFees\n",
@@ -112,7 +112,7 @@
         "    yearlyFees = 0.0025 * 12\n",
         "    savingsMax.total = savingsMain.yearlyInvest\n",
         "    print('#####################################')\n",
-        "    print('Forecasted perfromance of this plan at the highest rate of return::')\n",
+        "    print('Forecasted performance of this plan at the highest rate of return::')\n",
         "    \n",
         "    for i in range(10):\n",
         "        savingsMax.total = (savingsMax.total + (savingsMax.total * predictReturns)) - yearlyFees\n",
@@ -141,7 +141,7 @@
         "    yearlyFees = 0.13 * 12\n",
         "    stocksMin.total = stocksMain.yearlyInvest\n",
         "    print('#####################################')   \n",
-        "    print('Forecasted perfromance of this plan at the lowest rate of return:')\n",
+        "    print('Forecasted performance of this plan at the lowest rate of return:')\n",
         "    \n",
         "    for i in range(10):\n",
         "        stocksMin.total = (stocksMin.total + (stocksMin.total * predictReturns)) - yearlyFees\n",
@@ -176,7 +176,7 @@
         "    yearlyFees = 0.13 * 12\n",
         "    stocksMax.total = stocksMain.yearlyInvest\n",
         "    print('#####################################')   \n",
-        "    print('Forecasted perfromance of this plan at the higher rate of return:')\n",
+        "    print('Forecasted performance of this plan at the higher rate of return:')\n",
         "    \n",
         "    for i in range(10):\n",
         "        stocksMax.total = (stocksMax.total + (stocksMax.total * predictReturns)) - yearlyFees\n",
@@ -230,7 +230,7 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": 20,
+      "execution_count": 22,
       "outputs": []
     },
     {
