Correct spelling mistake enterer --> enter

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNg+KgJ2eT7NUlAw8fGeDG1",
+      "authorship_tag": "ABX9TyMK1J9lPOYcuob027WnzNxT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "    print('Please enter your Address')\n",
         "    opening.address = input()\n",
         "    \n",
-        "    print ('Please eneter your telephone number')\n",
+        "    print ('Please enter your telephone number')\n",
         "    opening.phone = input()\n",
         "    \n",
         "    print ('How much would you like to invest per month (£)?')\n",
@@ -230,7 +230,7 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": 22,
+      "execution_count": 25,
       "outputs": []
     },
     {
