Correct typo in monthly amount max dialog

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMK1J9lPOYcuob027WnzNxT",
+      "authorship_tag": "ABX9TyOHKlzRPppNtGcVs1CxzBhu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "    savingsMain.yearlyInvest = savingsMain.monthlyInvest * 12\n",
         "    \n",
         "    while savingsMain.yearlyInvest > 20000:\n",
-        "        print('The the initial monthly amount is too high for this type of plan' )\n",
+        "        print('The initial monthly amount is too high for this type of plan' )\n",
         "        print ('How much would you like to invest per month (£)?')\n",
         "        savingsMain.monthlyInvest = float(input())\n",
         "        savingsMain.yearlyInvest = savingsMain.monthlyInvest * 12\n",
