--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOHKlzRPppNtGcVs1CxzBhu",
+      "authorship_tag": "ABX9TyMzq8AxOwNQQfHlPAQ2xrBy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -211,6 +211,8 @@
         "    print('Personal Investment Quote for:')\n",
         "    print('Name: ', opening.name)\n",
         "    print('')\n",
+        "    print('Address: ', opening.address)\n",
+        "    print('')\n",
         "    print('Telephone Number: ', opening.phone)\n",
         "    print('--------------------------------------------------------')\n",
         "    print('')\n",
@@ -223,6 +225,8 @@
         "    print('Personal Investment Quote for:')\n",
         "    print('Name: ', opening.name)\n",
         "    print('')\n",
+        "    print('Address: ', opening.address)\n",
+        "    print('')\n",
         "    print('Telephone Number: ', opening.phone)\n",
         "    print('--------------------------------------------------------')\n",
         "    print('')\n",
@@ -230,7 +234,7 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": 25,
+      "execution_count": 29,
       "outputs": []
     },
     {
