Use stocksMax instead of stocksMin

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNDyDY6T0KPuUFH5yui2eJd",
+      "authorship_tag": "ABX9TyOEhPduhVx6Lq2yvCud0nm2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,8 +188,8 @@
         "        else:\n",
         "            taxRate = 0\n",
         "        \n",
-        "        taxPayable = stocksMin.total * taxRate\n",
-        "        postTax = stocksMin.total - taxPayable\n",
+        "        taxPayable = stocksMax.total * taxRate\n",
+        "        postTax = stocksMax.total - taxPayable\n",
         "        \n",
         "              \n",
         "        if i == 0 or i == 4 or i == 9:\n",
@@ -234,7 +234,7 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": []
     },
     {
