Tax calculations should use > not >=

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOEhPduhVx6Lq2yvCud0nm2",
+      "authorship_tag": "ABX9TyMlVtg2aw2d9UoQEKzdfMdb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,9 +146,9 @@
         "    for i in range(10):\n",
         "        stocksMin.total = (stocksMin.total + (stocksMin.total * predictReturns)) - yearlyFees\n",
         "        \n",
-        "        if stocksMin.total >= 40000:\n",
+        "        if stocksMin.total > 40000:\n",
         "            taxRate = 0.2\n",
-        "        elif stocksMin.total >= 12000:\n",
+        "        elif stocksMin.total > 12000:\n",
         "            taxRate = 0.1\n",
         "        else:\n",
         "            taxRate = 0\n",
@@ -181,9 +181,9 @@
         "    for i in range(10):\n",
         "        stocksMax.total = (stocksMax.total + (stocksMax.total * predictReturns)) - yearlyFees\n",
         "        \n",
-        "        if stocksMax.total >= 40000:\n",
+        "        if stocksMax.total > 40000:\n",
         "            taxRate = 0.2\n",
-        "        elif stocksMax.total >= 12000:\n",
+        "        elif stocksMax.total > 12000:\n",
         "            taxRate = 0.1\n",
         "        else:\n",
         "            taxRate = 0\n",
