--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMlVtg2aw2d9UoQEKzdfMdb",
+      "authorship_tag": "ABX9TyOAOLocYiWx+o+zmReNo/1a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,11 @@
         "    opening.phone = input()\n",
         "    \n",
         "    print ('How much would you like to invest per month (£)?')\n",
-        "    opening.investSum = float(input())    \n",
+        "    while True:\n",
+        "      opening.investSum = input()\n",
+        "      if (opening.investSum.isnumeric()):\n",
+        "        opening.investSum = int(opening.investSum)\n",
+        "        break\n",
         "\n",
         "def options ():\n",
         "    print('#####################################')\n",
@@ -234,7 +238,7 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": 33,
+      "execution_count": 50,
       "outputs": []
     },
     {
