Round currency to 2 decimal places

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOAOLocYiWx+o+zmReNo/1a",
+      "authorship_tag": "ABX9TyOWzMw71HRpHMUt4OlF76QZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,11 +102,11 @@
         "        if i == 0 or i == 4 or i == 9:\n",
         "            print('At the end of year', str(i))\n",
         "            print('Your investment will be worth:')\n",
-        "            print('£', savingsMin.total)\n",
+        "            print('£', round(savingsMin.total,2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', yearlyFees * (i+1))\n",
+        "            print('Total fees paid in this period: £', round(yearlyFees * (i+1),2))\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', savingsMin.total - (yearlyFees * (i+1)))\n",
+        "            print('Total profit in this period: £', round(savingsMin.total - (yearlyFees * (i+1)),2))\n",
         "            print('')\n",
         "    print('#####################################')\n",
         "    print('')\n",
@@ -125,11 +125,11 @@
         "        if i == 0 or i == 4 or i == 9:\n",
         "            print('At the end of year', str(i+1))\n",
         "            print('Your investment will be worth:')\n",
-        "            print('£', savingsMax.total,2)\n",
+        "            print('£', round(savingsMax.total,2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', yearlyFees * (i+1))\n",
+        "            print('Total fees paid in this period: £', round(yearlyFees * (i+1),2))\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', savingsMax.total - (yearlyFees * (i+1)))\n",
+        "            print('Total profit in this period: £', round(savingsMax.total - (yearlyFees * (i+1)),2))\n",
         "            print('')\n",
         "    print('#####################################')  \n",
         "    print('')\n",
@@ -164,13 +164,13 @@
         "        if i == 0 or i == 4 or i == 9:\n",
         "            print('At the end of year', str(i+1))\n",
         "            print('Your investment will be worth:')\n",
-        "            print('£', postTax)\n",
+        "            print('£', round(postTax,2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', yearlyFees * (i+1) )\n",
+        "            print('Total fees paid in this period: £', round(yearlyFees * (i+1),2) )\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', postTax - (yearlyFees * (i+1)))\n",
+        "            print('Total profit in this period: £', round(postTax - (yearlyFees * (i+1)),2))\n",
         "            print('')\n",
-        "            print('Total tax due in this period: £', taxPayable)\n",
+        "            print('Total tax due in this period: £', round(taxPayable,2))\n",
         "            print('')\n",
         "    print('#####################################')\n",
         "    print('') \n",
@@ -199,13 +199,13 @@
         "        if i == 0 or i == 4 or i == 9:\n",
         "            print('At the end of year', str(i+1))\n",
         "            print('Your investment will be worth:')\n",
-        "            print('£', postTax)\n",
+        "            print('£', round(postTax,2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', yearlyFees * (i+1))\n",
+        "            print('Total fees paid in this period: £', round(yearlyFees * (i+1),2))\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', postTax - (yearlyFees * (i+1)))\n",
+        "            print('Total profit in this period: £', round(postTax - (yearlyFees * (i+1)),2))\n",
         "            print('')\n",
-        "            print('Total tax due in this period: £', taxPayable,2)\n",
+        "            print('Total tax due in this period: £', round(taxPayable,2))\n",
         "            print('')\n",
         "    print('#####################################')\n",
         "    print('') \n",
@@ -238,7 +238,7 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": 50,
+      "execution_count": 62,
       "outputs": []
     },
     {
