Fix fee calculations!

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOWzMw71HRpHMUt4OlF76QZ",
+      "authorship_tag": "ABX9TyP2nZFNja0oJmxdMV68IOhR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,7 +96,7 @@
         "    print('Forecasted performance of this plan at the lowest rate of return:')\n",
         "    \n",
         "    for i in range(10):\n",
-        "        savingsMin.total = (savingsMin.total + (savingsMin.total * predictReturns)) - yearlyFees\n",
+        "        savingsMin.total = (savingsMin.total + (savingsMin.total * predictReturns)) - (savingsMin.total * yearlyFees)\n",
         "        \n",
         "        \n",
         "        if i == 0 or i == 4 or i == 9:\n",
@@ -104,9 +104,9 @@
         "            print('Your investment will be worth:')\n",
         "            print('£', round(savingsMin.total,2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', round(yearlyFees * (i+1),2))\n",
+        "            print('Total fees paid in this period: £', round(savingsMin.total * yearlyFees * (i+1),2))\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', round(savingsMin.total - (yearlyFees * (i+1)),2))\n",
+        "            print('Total profit in this period: £', round(savingsMin.total - (savingsMin.total * yearlyFees * (i+1)),2))\n",
         "            print('')\n",
         "    print('#####################################')\n",
         "    print('')\n",
@@ -148,7 +148,7 @@
         "    print('Forecasted performance of this plan at the lowest rate of return:')\n",
         "    \n",
         "    for i in range(10):\n",
-        "        stocksMin.total = (stocksMin.total + (stocksMin.total * predictReturns)) - yearlyFees\n",
+        "        stocksMin.total = (stocksMin.total + (stocksMin.total * predictReturns)) - (stocksMin.total * yearlyFees)\n",
         "        \n",
         "        if stocksMin.total > 40000:\n",
         "            taxRate = 0.2\n",
@@ -166,9 +166,9 @@
         "            print('Your investment will be worth:')\n",
         "            print('£', round(postTax,2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', round(yearlyFees * (i+1),2) )\n",
+        "            print('Total fees paid in this period: £', round(stocksMin.total * yearlyFees * (i+1),2) )\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', round(postTax - (yearlyFees * (i+1)),2))\n",
+        "            print('Total profit in this period: £', round(postTax - (stocksMin.total * yearlyFees * (i+1)),2))\n",
         "            print('')\n",
         "            print('Total tax due in this period: £', round(taxPayable,2))\n",
         "            print('')\n",
@@ -183,7 +183,7 @@
         "    print('Forecasted performance of this plan at the higher rate of return:')\n",
         "    \n",
         "    for i in range(10):\n",
-        "        stocksMax.total = (stocksMax.total + (stocksMax.total * predictReturns)) - yearlyFees\n",
+        "        stocksMax.total = (stocksMax.total + (stocksMax.total * predictReturns)) - (stocksMax.total * yearlyFees)\n",
         "        \n",
         "        if stocksMax.total > 40000:\n",
         "            taxRate = 0.2\n",
@@ -201,9 +201,9 @@
         "            print('Your investment will be worth:')\n",
         "            print('£', round(postTax,2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', round(yearlyFees * (i+1),2))\n",
+        "            print('Total fees paid in this period: £', round(stocksMax.total * yearlyFees * (i+1),2))\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', round(postTax - (yearlyFees * (i+1)),2))\n",
+        "            print('Total profit in this period: £', round(postTax - (stocksMax.total * yearlyFees * (i+1)),2))\n",
         "            print('')\n",
         "            print('Total tax due in this period: £', round(taxPayable,2))\n",
         "            print('')\n",
@@ -238,7 +238,7 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": 62,
+      "execution_count": 67,
       "outputs": []
     },
     {
