Display year + 1 in min stock logic

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP2nZFNja0oJmxdMV68IOhR",
+      "authorship_tag": "ABX9TyP06RLZcPkm6sX+h9drNh3g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +100,7 @@
         "        \n",
         "        \n",
         "        if i == 0 or i == 4 or i == 9:\n",
-        "            print('At the end of year', str(i))\n",
+        "            print('At the end of year', str(i+1))\n",
         "            print('Your investment will be worth:')\n",
         "            print('£', round(savingsMin.total,2))\n",
         "            print('')\n",
@@ -238,7 +238,7 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": 67,
+      "execution_count": 70,
       "outputs": []
     },
     {
