Fix fundamental calculation error which exposes fault in the specification. It is not correct to have the monthly fees as high as they are stated because this would make all investments unviable.

--- a/Task2Code.ipynb
+++ b/Task2Code.ipynb
@@ -6,7 +6,7 @@
       "name": "Task2Code",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP06RLZcPkm6sX+h9drNh3g",
+      "authorship_tag": "ABX9TyODty/O9ZEvKZNDgl/HpCAO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,19 +94,23 @@
         "    savingsMin.total = savingsMain.yearlyInvest\n",
         "    print('#####################################')   \n",
         "    print('Forecasted performance of this plan at the lowest rate of return:')\n",
-        "    \n",
+        "    runningFees = 0\n",
+        "    runningEarnings = 0\n",
         "    for i in range(10):\n",
-        "        savingsMin.total = (savingsMin.total + (savingsMin.total * predictReturns)) - (savingsMin.total * yearlyFees)\n",
-        "        \n",
+        "        earnings = savingsMin.total * predictReturns\n",
+        "        runningEarnings = runningEarnings + earnings\n",
+        "        fees = savingsMin.total * yearlyFees\n",
+        "        runningFees = runningFees + fees\n",
+        "        savingsMin.total = savingsMin.total + earnings - fees\n",
         "        \n",
         "        if i == 0 or i == 4 or i == 9:\n",
         "            print('At the end of year', str(i+1))\n",
         "            print('Your investment will be worth:')\n",
         "            print('£', round(savingsMin.total,2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', round(savingsMin.total * yearlyFees * (i+1),2))\n",
+        "            print('Total fees paid in this period: £', round(runningFees, 2))\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', round(savingsMin.total - (savingsMin.total * yearlyFees * (i+1)),2))\n",
+        "            print('Total profit in this period: £', round(savingsMin.total - savingsMain.yearlyInvest, 2))\n",
         "            print('')\n",
         "    print('#####################################')\n",
         "    print('')\n",
@@ -117,19 +121,23 @@
         "    savingsMax.total = savingsMain.yearlyInvest\n",
         "    print('#####################################')\n",
         "    print('Forecasted performance of this plan at the highest rate of return::')\n",
-        "    \n",
+        "    runningFees = 0\n",
+        "    runningEarnings = 0\n",
         "    for i in range(10):\n",
-        "        savingsMax.total = (savingsMax.total + (savingsMax.total * predictReturns)) - yearlyFees\n",
-        "        \n",
+        "        earnings = savingsMax.total * predictReturns\n",
+        "        runningEarnings = runningEarnings + earnings\n",
+        "        fees = savingsMax.total * yearlyFees\n",
+        "        runningFees = runningFees + fees\n",
+        "        savingsMax.total = savingsMax.total + earnings - fees\n",
         "         \n",
         "        if i == 0 or i == 4 or i == 9:\n",
         "            print('At the end of year', str(i+1))\n",
         "            print('Your investment will be worth:')\n",
         "            print('£', round(savingsMax.total,2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', round(yearlyFees * (i+1),2))\n",
+        "            print('Total fees paid in this period: £', round(runningFees, 2))\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', round(savingsMax.total - (yearlyFees * (i+1)),2))\n",
+        "            print('Total profit in this period: £', round(savingsMax.total - savingsMain.yearlyInvest, 2))\n",
         "            print('')\n",
         "    print('#####################################')  \n",
         "    print('')\n",
@@ -147,8 +155,14 @@
         "    print('#####################################')   \n",
         "    print('Forecasted performance of this plan at the lowest rate of return:')\n",
         "    \n",
+        "    runningFees = 0\n",
+        "    runningEarnings = 0\n",
+        "    runningTax = 0\n",
         "    for i in range(10):\n",
-        "        stocksMin.total = (stocksMin.total + (stocksMin.total * predictReturns)) - (stocksMin.total * yearlyFees)\n",
+        "        earnings = stocksMin.total * predictReturns\n",
+        "        runningEarnings = runningEarnings + earnings\n",
+        "        fees = stocksMin.total * yearlyFees\n",
+        "        runningFees = runningFees + fees\n",
         "        \n",
         "        if stocksMin.total > 40000:\n",
         "            taxRate = 0.2\n",
@@ -158,19 +172,19 @@
         "            taxRate = 0\n",
         "        \n",
         "        taxPayable = stocksMin.total * taxRate\n",
-        "        postTax = stocksMin.total - taxPayable\n",
-        "        \n",
-        "              \n",
+        "        runningTax = runningTax + taxPayable\n",
+        "        stocksMin.total = stocksMin.total + earnings - fees\n",
+        "\n",
         "        if i == 0 or i == 4 or i == 9:\n",
         "            print('At the end of year', str(i+1))\n",
         "            print('Your investment will be worth:')\n",
-        "            print('£', round(postTax,2))\n",
+        "            print('£', round(stocksMin.total,2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', round(stocksMin.total * yearlyFees * (i+1),2) )\n",
+        "            print('Total fees paid from start: £', round(runningFees,2) )\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', round(postTax - (stocksMin.total * yearlyFees * (i+1)),2))\n",
+        "            print('Total profit from start: £', round(stocksMin.total - stocksMain.yearlyInvest, 2))\n",
         "            print('')\n",
-        "            print('Total tax due in this period: £', round(taxPayable,2))\n",
+        "            print('Total tax due from start: £', round(runningTax, 2))\n",
         "            print('')\n",
         "    print('#####################################')\n",
         "    print('') \n",
@@ -182,8 +196,14 @@
         "    print('#####################################')   \n",
         "    print('Forecasted performance of this plan at the higher rate of return:')\n",
         "    \n",
+        "    runningFees = 0\n",
+        "    runningEarnings = 0\n",
+        "    runningTax = 0\n",
         "    for i in range(10):\n",
-        "        stocksMax.total = (stocksMax.total + (stocksMax.total * predictReturns)) - (stocksMax.total * yearlyFees)\n",
+        "        earnings = stocksMax.total * predictReturns\n",
+        "        runningEarnings = runningEarnings + earnings\n",
+        "        fees = stocksMax.total * yearlyFees\n",
+        "        runningFees = runningFees + fees\n",
         "        \n",
         "        if stocksMax.total > 40000:\n",
         "            taxRate = 0.2\n",
@@ -193,19 +213,19 @@
         "            taxRate = 0\n",
         "        \n",
         "        taxPayable = stocksMax.total * taxRate\n",
-        "        postTax = stocksMax.total - taxPayable\n",
-        "        \n",
-        "              \n",
+        "        runningTax = runningTax + taxPayable\n",
+        "        stocksMax.total = stocksMax.total + earnings - fees - taxPayable\n",
+        "\n",
         "        if i == 0 or i == 4 or i == 9:\n",
         "            print('At the end of year', str(i+1))\n",
         "            print('Your investment will be worth:')\n",
-        "            print('£', round(postTax,2))\n",
+        "            print('£', round(stocksMax.total, 2))\n",
         "            print('')\n",
-        "            print('Total fees paid in this period: £', round(stocksMax.total * yearlyFees * (i+1),2))\n",
+        "            print('Total fees paid from start: £', round(runningFees, 2))\n",
         "            print('')\n",
-        "            print('Total profit in this period: £', round(postTax - (stocksMax.total * yearlyFees * (i+1)),2))\n",
+        "            print('Total profit from start: £', round(stocksMax.total - stocksMain.yearlyInvest, 2))\n",
         "            print('')\n",
-        "            print('Total tax due in this period: £', round(taxPayable,2))\n",
+        "            print('Total tax due from start: £', round(runningTax, 2))\n",
         "            print('')\n",
         "    print('#####################################')\n",
         "    print('') \n",
@@ -238,20 +258,127 @@
         "    stocksMin()\n",
         "    stocksMax()\n"
       ],
-      "execution_count": 70,
+      "execution_count": 106,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DOjzzDphWI-f"
+        "id": "DOjzzDphWI-f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "85457f61-597c-442c-cb5e-eff1cd85b0fe"
       },
       "source": [
         "opening()\n",
-        "options()"
+        "options()asd"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "#####################################\n",
+            "Welcome to the investment quote system\n",
+            "\n",
+            "Please enter your name\n",
+            "asd\n",
+            "Please enter your Address\n",
+            "ddasd\n",
+            "Please enter your telephone number\n",
+            "asd\n",
+            "How much would you like to invest per month (£)?\n",
+            "3000\n",
+            "#####################################\n",
+            "There are two types of investment available:\n",
+            "Option 1 - Savings plan\n",
+            "Option 2 - Managed stock investment\n",
+            "Please select an option (press 1 or 2 followed by enter)\n",
+            "#####################################\n",
+            "2\n",
+            "--------------------------------------------------------\n",
+            "Personal Investment Quote for:\n",
+            "Name:  asd\n",
+            "\n",
+            "Address:  ddasd\n",
+            "\n",
+            "Telephone Number:  asd\n",
+            "--------------------------------------------------------\n",
+            "\n",
+            "You chose a Managed Stock Investment plan\n",
+            "#####################################\n",
+            "Forecasted performance of this plan at the lowest rate of return:\n",
+            "At the end of year 1\n",
+            "Your investment will be worth:\n",
+            "£ 31824.0\n",
+            "\n",
+            "Total fees paid in this period from start: £ 5616.0\n",
+            "\n",
+            "Total profit in this period from start: £ -4176.0\n",
+            "\n",
+            "Total tax due in this period from start: £ 3600.0\n",
+            "\n",
+            "At the end of year 5\n",
+            "Your investment will be worth:\n",
+            "£ 19434.07\n",
+            "\n",
+            "Total fees paid in this period from start: £ 22278.32\n",
+            "\n",
+            "Total profit in this period from start: £ -16565.93\n",
+            "\n",
+            "Total tax due in this period from start: £ 14280.97\n",
+            "\n",
+            "At the end of year 10\n",
+            "Your investment will be worth:\n",
+            "£ 10491.2\n",
+            "\n",
+            "Total fees paid in this period from start: £ 34304.94\n",
+            "\n",
+            "Total profit in this period from start: £ -25508.8\n",
+            "\n",
+            "Total tax due in this period from start: £ 20803.56\n",
+            "\n",
+            "#####################################\n",
+            "\n",
+            "#####################################\n",
+            "Forecasted performance of this plan at the higher rate of return:\n",
+            "At the end of year 1\n",
+            "Your investment will be worth:\n",
+            "£ 35064.0\n",
+            "\n",
+            "Total fees paid in this period from start: £ 5616.0\n",
+            "\n",
+            "Total profit in this period from start: £ -936.0\n",
+            "\n",
+            "Total tax due in this period from start: £ 3600.0\n",
+            "\n",
+            "At the end of year 5\n",
+            "Your investment will be worth:\n",
+            "£ 31557.11\n",
+            "\n",
+            "Total fees paid in this period from start: £ 26657.31\n",
+            "\n",
+            "Total profit in this period from start: £ -4442.89\n",
+            "\n",
+            "Total tax due in this period from start: £ 17088.02\n",
+            "\n",
+            "At the end of year 10\n",
+            "Your investment will be worth:\n",
+            "£ 27662.54\n",
+            "\n",
+            "Total fees paid in this period from start: £ 50024.75\n",
+            "\n",
+            "Total profit in this period from start: £ -8337.46\n",
+            "\n",
+            "Total tax due in this period from start: £ 32067.15\n",
+            "\n",
+            "#####################################\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
